포스터 리소스 변경

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- 그냥 모양만 같게 하기 위해 하드코딩 -->
                 <h1 class="banner_title">종이의 집</h1>
                 <div class="banner_btn">
-                    <button>재생</button>
+                    <button>▶ 재생</button>
                 </div>
                 <p>
                     역사상 최대 규모의 강도 사건을 수행하기 위해
@@ -58,42 +58,37 @@
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie1.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie2.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie3.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie5.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie6.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie7.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
                 <img
-                    src="main-img/large-movie4.jpg"
-                    alt=""
-                    class="row_poster row_posterLarge"
-                />
-                <img
-                    src="main-img/large-movie4.jpg"
+                    src="main-img/large-movie8.jpg"
                     alt=""
                     class="row_poster row_posterLarge"
                 />
@@ -106,45 +101,41 @@
             <div class="row_posters">
                 <!-- 작은 포스터는 스타일링을 위한 클래스 하나만 넣어줌 -->
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie1.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie2.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie3.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie4.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie5.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie6.jpg"
                     alt=""
                     class="row_poster"
                 />
                 <img 
-                    src="main-img/movie-1.jpeg"
+                    src="main-img/small-movie7.jpg"
                     alt=""
                     class="row_poster"
                 />
-                <img 
-                    src="main-img/movie-1.jpeg"
-                    alt=""
-                    class="row_poster"
-                />
+
             </div>
         </div>
      </main>
